--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 	<description>Sistema de usuarios para NTT Data</description>
 	<properties>
 		<java.version>17</java.version>
+		<feign-gson-version>10.11</feign-gson-version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -51,6 +52,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>io.github.openfeign</groupId>
+			<artifactId>feign-gson</artifactId>
+			<version>${feign-gson-version}</version>
 		</dependency>
 	</dependencies>
 
